--- a/leads/templates/leads/lead_detail.html
+++ b/leads/templates/leads/lead_detail.html
@@ -22,5 +22,7 @@
     <hr>
     <h1>This is the details of {{ lead.first_name }}</h1>
     <p>Age: {{ lead.age }}</p>
+    <p>The agent: {{ lead.agent }}</p>
+    <a href="/leads/{{ lead.pk }}/update/">Update</a>
 </body>
 </html>
