--- a/leads/templates/leads/lead_delete.html
+++ b/leads/templates/leads/lead_delete.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <a href="{% url 'leads:lead-list' %}">Submit</a>
+    <a href="{% url 'leads:lead-list' %}">Go back to leads</a>
     <hr />
-    <h1>Create a new lead</h1>
+    <h1>U sure??</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
